--- a/Fontus/package.json
+++ b/Fontus/package.json
@@ -11,6 +11,8 @@
     "later": "^1.1.6",
     "superagent": "^1.3.0",
     "mqtt": "^1.7.4",
-    "twilio": "^2.3.0"
+    "twilio": "^2.3.0",
+    "serialport":"latest",
+    "request":"latest"
   }
 }
